--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "start": "node server",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "db": "mongod --dbpath=./data"
+    "db": "mongod --dbpath=./data",
+    "dev-server": "nodemon --watch server server",
+    "dev": "concurrently \"npm run db\" \"npm run client\" \"npm run dev-server\""
   },
   "jest": {
     "collectCoverageFrom": [
@@ -101,5 +103,8 @@
   "author": "Stefan Redfield <redfield.stefan@gmail.com>",
   "license": "MIT",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
-  "devDependencies": {}
+  "devDependencies": {
+    "concurrently": "^3.5.1",
+    "nodemon": "^1.13.3"
+  }
 }
